# TextEditor

./: CMakeLists.txt  README.md
include/: cursor.h  editor.h  editor_enum.h  file_manager.h  input_handler.h  screen.h  string_utils.h  undo_redo_info.h  utils.h
src/: cursor.cpp  editor.cpp  file_manager.cpp  input_handler.cpp  main.cpp  screen.cpp  screen_utils.cpp  string_utils.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp
test/test_case/: test_cursor.h  test_file_manager.h  test_string_utils.h
