CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

PROJECT(TextEditor)

IF(WIN32)
    SET(PROG_EXE_NAME ${PROJECT_NAME})
    SET(PROG_LIB_NAME lib${PROJECT_NAME})
ELSE(WIN32)
    SET(PROG_EXE_NAME ${PROJECT_NAME}_exe)
    SET(PROG_LIB_NAME ${PROJECT_NAME})
ENDIF(WIN32)

IF(WIN32)
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
ELSE(WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF(WIN32)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

SET(BUILD_DIR ${CMAKE_SOURCE_DIR}/build)
SET(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
SET(LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})

SET(MAIN_CPP_FILE ${SRC_DIR}/main.cpp)

AUX_SOURCE_DIRECTORY(${SRC_DIR} SRC_FILES)
LIST(REMOVE_ITEM SRC_FILES ${MAIN_CPP_FILE})

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR} ${INCLUDE_DIR})

FILE(GLOB HEADER_FILES "${INCLUDE_DIR}/*.h")
ADD_LIBRARY(${PROG_LIB_NAME} STATIC ${SRC_FILES} ${HEADER_FILES})

LINK_DIRECTORIES(${LIB_DIR})

ADD_EXECUTABLE(${PROG_EXE_NAME} ${MAIN_CPP_FILE})

TARGET_LINK_LIBRARIES(${PROG_EXE_NAME} ${PROG_LIB_NAME})

ADD_SUBDIRECTORY(test)

if(WIN32)
    ADD_DEFINITIONS(-DWINDOWS=ON)
ENDIF(WIN32)
    