INCLUDE(GoogleTest)
LINK_DIRECTORIES(${CONAN_LIB_DIRS})

SET(TEST_CASE_INCLUDE test_case)

FILE(GLOB TEST_CASE "${TEST_CASE_INCLUDE}/*.h")
SOURCE_GROUP(TestCase FILES ${TEST_CASE})

ADD_EXECUTABLE(gTest main.cpp ${TEST_CASE})

TARGET_LINK_LIBRARIES(gTest ${CONAN_INCLUDE_DIRS_GTEST} ${PROG_LIB_NAME} ${CONAN_LIBS})
TARGET_INCLUDE_DIRECTORIES(gTest PRIVATE ${CMAKE_SOURCE_DIR}/lib ${TEST_CASE_INCLUDE})
